# RandomEQ1

./: README.md
Build (MacOS)/RandomEQ.vst3/Contents/MacOS/: RandomEQ
RandomEQ/Source/: Filter.cpp  Filter.h  PluginProcessor.h  RandomParameters.cpp
Source/: CMakeLists.txt  FastSqrt.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  RandomParameters.h
